removed search to tools and added pages

--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
                 <a class="item" href="https://dev.to">dev.to</a>
             </div>
             <div>
-                <span class="title">search</span>
+                <span class="title">tools</span>
                 <span class="separator">&raquo;</span>
-                <a class="item" href="https://www.duckduckgo.com">duckduckgo</a>
-                <a class="item" href="https://www.google.com">google</a>
-                <a class="item" href="https://en.wikipedia.org">wiki</a>
+                <a class="item" href="https://regexr.com/">regexr</a>
+                <a class="item" href="https://github.com/">github</a>
+                <a class="item" href="https://sr.ht/">sourcehut</a>
+                <a class="item" href="https://trello.com/skrd159/boards">trello</a>
+                <a class="item" href="https://calendar.google.com/calendar/r">calendar</a>
+                <a class="item" href="https://unsplash.com/">unsplash</a>
                 <a class="item" href="https://images.google.com">images</a>
             </div>
             <div>
