--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <a class="item" href="https://regexr.com/">regexr</a>
                 <a class="item" href="https://github.com/">github</a>
                 <a class="item" href="https://sr.ht/">sourcehut</a>
+                <a class="item" href="https://cloud.digitalocean.com/">digitalocean</a>
                 <a class="item" href="https://trello.com/skrd159/boards">trello</a>
                 <a class="item" href="https://calendar.google.com/calendar/r">calendar</a>
                 <a class="item" href="https://unsplash.com/">unsplash</a>
