Agregado input para hacer busquedas y un par de paginas

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <body>
         <div class="flex">
             <div>
+                <form action="https://www.google.com/search">
+                    <input type="text" class="search" placeholder="search" name="q" autofocus>
+                </form>
+            </div>
+            <div>
+                <span class="title">general</span>
+                <span class="separator">&raquo;</span>
+                <a class="item" href="https://twitter.com/">twitter</a>
+                <a class="item" href="https://www.youtube.com/">youtube</a>
+                <a class="item" href="https://ycombinator.hackernews.com">hacker_news</a>
+                <a class="item" href="https://dev.to">dev.to</a>
+            </div>
+            <div>
                 <span class="title">reddit</span>
                 <span class="separator">&raquo;</span>
                 <a class="item" href="https://www.reddit.com/r/unixporn">/r/unixporn</a>
@@ -23,12 +36,6 @@
                 <a class="item" href="https://4chan.org/wg/catalog">/wg/</a>
                 <a class="item" href="https://4chan.org/v/catalog">/v/</a>
                 <a class="item" href="https://4chan.org/x/catalog">/x/</a>
-            </div>
-            <div>
-                <span class="title">agregators</span>
-                <span class="separator">&raquo;</span>
-                <a class="item" href="https://ycombinator.hackernews.com">hacker_news</a>
-                <a class="item" href="https://dev.to">dev.to</a>
             </div>
             <div>
                 <span class="title">tools</span>
