--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span class="separator">&raquo;</span>
                 <a class="item" href="https://twitter.com/">twitter</a>
                 <a class="item" href="https://www.youtube.com/">youtube</a>
-                <a class="item" href="https://ycombinator.hackernews.com">hacker_news</a>
+                <a class="item" href="https://news.ycombinator.com">hacker_news</a>
                 <a class="item" href="https://dev.to">dev.to</a>
             </div>
             <div>
