Links a paginas de descargas

--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
                 <a class="item" href="http://www.craigkerstiens.com/">craig</a>
                 <a class="item" href="https://www.nurkiewicz.com/">nurkiewicz</a>
                 <a class="item" href="https://castel.dev/">castel</a>
+            <div>
+                <span class="title">descargas</span>
+                <span class="separator">&raquo;</span>
+                <a class="item" href="https://rutracker.org/forum/index.php">rutracker</a>
+                <a class="item" href="http://rutor.info/">rutor</a>
+                <a class="item" href="https://1337x.to/">1337x.to</a>
+                <a class="item" href="https://thepiratebay.org/">thepiratebay</a>
+                <a class="item" href="https://modarchive.org/">modarchive</a>
+            </div>
             </div>
         </div>
         </div>
