Suena mas bonito down

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <a class="item" href="https://www.nurkiewicz.com/">nurkiewicz</a>
                 <a class="item" href="https://castel.dev/">castel</a>
             <div>
-                <span class="title">descargas</span>
+                <span class="title">down</span>
                 <span class="separator">&raquo;</span>
                 <a class="item" href="https://rutracker.org/forum/index.php">rutracker</a>
                 <a class="item" href="http://rutor.info/">rutor</a>
