agregadas paginas y cambiao los colores para matchear base16-snazzy

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
                 <a class="item" href="https://twitter.com/">twitter</a>
                 <a class="item" href="https://www.youtube.com/">youtube</a>
                 <a class="item" href="https://news.ycombinator.com">hacker_news</a>
+                <a class="item" href="https://lobste.rs/">lobsters</a>
                 <a class="item" href="https://dev.to">dev.to</a>
             </div>
             <div>
                 <span class="title">reddit</span>
                 <span class="separator">&raquo;</span>
+                <a class="item" href="https://www.reddit.com/">just_reddit</a>
                 <a class="item" href="https://www.reddit.com/r/unixporn">/r/unixporn</a>
                 <a class="item" href="https://www.reddit.com/r/chile">/r/chile</a>
                 <a class="item" href="https://www.reddit.com/r/programming">/r/programming</a>
@@ -46,8 +48,8 @@
                 <a class="item" href="https://cloud.digitalocean.com/">digitalocean</a>
                 <a class="item" href="https://trello.com/skrd159/boards">trello</a>
                 <a class="item" href="https://calendar.google.com/calendar/r">calendar</a>
+                <a class="item" href="https://translate.google.com">transtale</a>
                 <a class="item" href="https://unsplash.com/">unsplash</a>
-                <a class="item" href="https://images.google.com">images</a>
             </div>
             <div>
                 <span class="title">blogs</span>
@@ -63,6 +65,11 @@
                 <a class="item" href="http://www.craigkerstiens.com/">craig</a>
                 <a class="item" href="https://www.nurkiewicz.com/">nurkiewicz</a>
                 <a class="item" href="https://castel.dev/">castel</a>
+                <a class="item" href="https://eev.ee/">eevee</a>
+                <a class="item" href="https://blog.codinghorror.com/">codinghorror</a>
+                <a class="item" href="https://blog.jessfraz.com/">jessie</a>
+                <a class="item" href="https://jrl.ninja">jrl</a>
+            </div>
             <div>
                 <span class="title">down</span>
                 <span class="separator">&raquo;</span>
@@ -72,6 +79,12 @@
                 <a class="item" href="https://thepiratebay.org/">thepiratebay</a>
                 <a class="item" href="https://modarchive.org/">modarchive</a>
             </div>
+            <div>
+                <span class="title">inacap</span>
+                <span class="separator">&raquo;</span>
+                <a class="item" href="http://portales.inacap.cl/">home</a>
+                <a class="item" href="https://www.inacap.cl/tportalvp/intranet-alumno">intranet</a>
+                <a class="item" href="https://lms.inacap.cl/my/">aprendizaje</a>
             </div>
         </div>
         </div>
