no me gusta el autocomplete :C

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="flex">
             <div>
                 <form action="https://www.google.com/search">
-                    <input type="text" class="search" placeholder="search" name="q" autofocus>
+                    <input type="text" class="search" placeholder="search" name="q" autocomplete="off" autofocus>
                 </form>
             </div>
             <div>
