Agrege cosas de stardew valley <3 gran juego

--- a/index.html
+++ b/index.html
@@ -86,7 +86,14 @@
                 <a class="item" href="https://www.inacap.cl/tportalvp/intranet-alumno">intranet</a>
                 <a class="item" href="https://lms.inacap.cl/my/">aprendizaje</a>
             </div>
-        </div>
+            <div>
+                <span class="title">stardew_valley</span>
+                <span class="separator">&raquo;</span>
+                <a class="item" href="https://www.reddit.com/r/StardewValley/">/r/stardewvalley</a>
+                <a class="item" href="https://www.reddit.com/r/FarmsofStardewValley/">/r/FarmsofStardewValley</a>
+                <a class="item" href="https://www.reddit.com/r/StardewHomeDesign/">/r/StardewHomeDesign</a>
+                <a class="item" href="https://stardewvalleywiki.com/">wiki</a>
+            </div>
         </div>
     </body>
 </html>
