--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <span class="title">4chan</span>
                 <span class="separator">&raquo;</span>
                 <a class="item" href="https://4chan.org/wg/catalog">/wg/</a>
+                <a class="item" href="https://4chan.org/g/catalog">/g/</a>
                 <a class="item" href="https://4chan.org/v/catalog">/v/</a>
                 <a class="item" href="https://4chan.org/x/catalog">/x/</a>
             </div>
