Cambie los colores creo

--- a/index.html
+++ b/index.html
@@ -6,26 +6,9 @@
     <title>Start</title>
     <style>
 :root {
-    --background: #141219;
-    --foreground: #83a7c8;
-    --cursor: #83a7c8;
-    --color0: #141219;
-    --color1: #cb0020;
-    --color2: #eb0021;
-    --color3: #ff201b;
-    --color4: #00a381;
-    --color5: #ff8c70;
-    --color6: #003b8c;
-    --color7: #83a7c8;
-    --color8: #5b748c;
-    --color9: #cb0020;
-    --color10: #eb0021;
-    --color11: #ff201b;
-    --color12: #00a381;
-    --color13: #ff8c70;
-    --color14: #003b8c;
-    --color15: #83a7c8;
-    --width: 70ch;
+  --background: #ffffff;
+  --foreground: #000000;
+  --width: 70ch;
 }
 
 * {
@@ -73,7 +56,7 @@ html {
   width: 100%;
   background: var(--background);
   color: var(--foreground);
-  border: solid 2px var(--color1);
+  border: solid 2px var(--foreground);
   padding: 1ch;
 }
 
@@ -92,22 +75,13 @@ html {
 }
 
 .link a:hover {
-  font-weight: 700;
+  text-decoration: underline
 }
 
 link a:visited {
   color: var(--foreground);
 }
 
-.c1 { color: var(--color1) }
-.c2 { color: var(--color2) }
-.c3 { color: var(--color3) }
-.c4 { color: var(--color4) }
-.c5 { color: var(--color5) }
-.c6 { color: var(--color6) }
-.c7 { color: var(--color7) }
-.c8 { color: var(--color8) }
-.c9 { color: var(--color9) }
     </style>
   </head>
 
@@ -119,36 +93,36 @@ link a:visited {
       <div class='items'>
         <span class='title'>General</span>
         <div>
-          <span class='link c1'>[<a href="https://tweetdeck.twitter.com">twitter</a>]</span>
-          <span class='link c1'>[<a href="https://www.youtube.com">youtube</a>]</span>
-          <span class='link c1'>[<a href="https://news.ycombinator.com">hacker_news</a>]</span>
-          <span class='link c1'>[<a href="https://lobste.rs">lobsters</a>]</span>
-          <span class='link c1'>[<a href="https://web.whatsapp.com">whatsapp</a>]</span>
+          <span class='link'>[<a href="https://tweetdeck.twitter.com">twitter</a>]</span>
+          <span class='link'>[<a href="https://www.youtube.com">youtube</a>]</span>
+          <span class='link'>[<a href="https://news.ycombinator.com">hacker_news</a>]</span>
+          <span class='link'>[<a href="https://lobste.rs">lobsters</a>]</span>
+          <span class='link'>[<a href="https://web.whatsapp.com">whatsapp</a>]</span>
         </div>
 
         <span class='title'>Inacap</span>
         <div>
-          <span class='link c1'>[<a href="https://www.inacap.cl">home</a>]</span>
-          <span class='link c1'>[<a href="https://adfs.inacap.cl/adfs/ls/?wtrealm=https://siga.inacap.cl/sts/&wa=wsignin1.0&wreply=https://siga.inacap.cl/sts/&wctx=https%3a%2f%2fadfs.inacap.cl%2fadfs%2fls%2f%3fwreply%3dhttps%3a%2f%2fwww.inacap.cl%2ftportalvp%2fintranet-alumno%26wtrealm%3dhttps%3a%2f%2fwww.inacap.cl%2f">intranet</a>]</span>
-          <span class='link c1'>[<a href="https://www.inacap.cl/tportalvp/procesar_link.php?url=https://lms.inacap.cl/auth/saml2/login.php?wants=https://lms.inacap.cl/my/">aprendizaje</a>]</span>
-          <span class='link c1'>[<a href="https://docs.google.com">docs</a>]</span>
+          <span class='link'>[<a href="https://www.inacap.cl">home</a>]</span>
+          <span class='link'>[<a href="https://adfs.inacap.cl/adfs/ls/?wtrealm=https://siga.inacap.cl/sts/&wa=wsignin1.0&wreply=https://siga.inacap.cl/sts/&wctx=https%3a%2f%2fadfs.inacap.cl%2fadfs%2fls%2f%3fwreply%3dhttps%3a%2f%2fwww.inacap.cl%2ftportalvp%2fintranet-alumno%26wtrealm%3dhttps%3a%2f%2fwww.inacap.cl%2f">intranet</a>]</span>
+          <span class='link'>[<a href="https://www.inacap.cl/tportalvp/procesar_link.php?url=https://lms.inacap.cl/auth/saml2/login.php?wants=https://lms.inacap.cl/my/">aprendizaje</a>]</span>
+          <span class='link'>[<a href="https://docs.google.com">docs</a>]</span>
         </div>
 
         <span class='title'>Reddit</span>
         <div>
-          <span class='link c1'>[<a href="https://www.reddit.com">frontpage</a>]</span>
-          <span class='link c1'>[<a href="https://www.reddit.com/r/unixporn">/r/unixporn</a>]</span>
-          <span class='link c1'>[<a href="https://www.reddit.com/r/piracy">/r/piracy</a>]</span>
-          <span class='link c1'>[<a href="https://www.reddit.com/r/roms">/r/roms</a>]</span>
-          <span class='link c1'>[<a href="https://www.reddit.com/r/chile">/r/chile</a>]</span>
+          <span class='link'>[<a href="https://www.reddit.com">frontpage</a>]</span>
+          <span class='link'>[<a href="https://www.reddit.com/r/unixporn">/r/unixporn</a>]</span>
+          <span class='link'>[<a href="https://www.reddit.com/r/piracy">/r/piracy</a>]</span>
+          <span class='link'>[<a href="https://www.reddit.com/r/roms">/r/roms</a>]</span>
+          <span class='link'>[<a href="https://www.reddit.com/r/chile">/r/chile</a>]</span>
         </div>
 
         <span class='title'>4chan</span>
         <div>
-          <span class='link c1'>[<a href="https://4chan.org/g/catalog">/g/</a>]</span>
-          <span class='link c1'>[<a href="https://4chan.org/wg/catalog">/wg/</a>]</span>
-          <span class='link c1'>[<a href="https://4chan.org/v/catalog">/v/</a>]</span>
-          <span class='link c1'>[<a href="https://4chan.org/x/catalog">/x/</a>]</span>
+          <span class='link'>[<a href="https://4chan.org/g/catalog">/g/</a>]</span>
+          <span class='link'>[<a href="https://4chan.org/wg/catalog">/wg/</a>]</span>
+          <span class='link'>[<a href="https://4chan.org/v/catalog">/v/</a>]</span>
+          <span class='link'>[<a href="https://4chan.org/x/catalog">/x/</a>]</span>
         </div>
       </div>
     </div>
@@ -171,7 +145,7 @@ link a:visited {
               default : window.location.href = 'https://www.duckduckgo.com/?q=' + encodeURIComponent(q); break;
             }
           } else {
-             window.location.href = 'https://www.duckduckgo.com/?q=' + encodeURIComponent(q);
+            window.location.href = 'https://www.duckduckgo.com/?q=' + encodeURIComponent(q);
           }
         }
       }
