--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <title></title>
 
     <link rel='icon' type='image/png' href='/favicon.png'>
-    <link rel='stylesheet' href='/index.css'>
-    <link rel='stylesheet' href='/build/bundle.css'>
+    <link rel='stylesheet' href='/build/index.css'>
 
     <script defer src='/build/bundle.js'></script>
   </head>
