--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
     <link rel='icon' type='image/png' href='/favicon.png'>
     <link rel='stylesheet' href='/build/index.css'>
 
+    <link rel="preload" href="styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+      <link rel="stylesheet" href="styles.css">
+    </noscript>
+
     <script defer src='/build/bundle.js'></script>
   </head>
 
