--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,10 @@
     <title></title>
 
     <link rel='icon' type='image/png' href='/favicon.png'>
-    <link rel='stylesheet' href='/build/index.css'>
 
-    <link rel="preload" href="/build/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="/build/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
-      <link rel="stylesheet" href="/build/styles.css">
+      <link rel="stylesheet" href="/build/index.css">
     </noscript>
 
     <script defer src='/build/bundle.js'></script>
