Agregando tracking con umami

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     </noscript>
 
     <script defer src='/build/bundle.js'></script>
+    <script async defer data-website-id="18b19e7b-b080-4999-a6ba-472ac9314e97" src="https://umami.danielcortes.xyz/umami.js"></script>
   </head>
 
   <body>
